--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -9,6 +9,8 @@
     <file>images/boardwindow/1leftcomment.png</file>
     <file>images/boardwindow/1rightcomment.png</file>
     <file>images/boardwindow/warning.png</file>
+    <file>images/boardwindow/audio-on.png</file>
+    <file>images/boardwindow/audio-muted.png</file>
     <file>images/boardwindow/bluearrow-down.png</file>
     <file>images/boardwindow/bluearrow-end-down.png</file>
     <file>images/boardwindow/bluearrow-end-left.png</file>
@@ -37,6 +39,7 @@
     <file>images/boardwindow/coords.png</file>
     <file>images/boardwindow/landscape.png</file>
     <file>images/boardwindow/portrait.png</file>
+    <file>images/boardwindow/fullscreen.png</file>
     <file>images/board/wood2.png</file>
     <file>images/board/wood1.png</file>
     <file>images/board/wood3.png</file>
