Add menu options to view the README
Also disable the manual help option in the client window; we don't actually
build/ship that (yet?)

--- a/src/boardwindow_gui.ui
+++ b/src/boardwindow_gui.ui
@@ -2593,6 +2593,7 @@ After placing and/or undo release button for returning to starting point automat
      <string>&amp;Help</string>
     </property>
     <addaction name="helpManual"/>
+    <addaction name="helpReadme"/>
     <addaction name="separator"/>
     <addaction name="helpAbout"/>
     <addaction name="helpAboutQt"/>
@@ -3729,6 +3730,11 @@ Try to find an engine configured as an analysis tool in the engine list and conn
    </property>
    <property name="shortcut">
     <string>Alt+G</string>
+   </property>
+  </action>
+  <action name="helpReadme">
+   <property name="text">
+    <string>View &amp;README</string>
    </property>
   </action>
  </widget>
